<resources>
    <string name="app_name">FragmentExample157-1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">! Hola, %1$s !</string>
    <string name="question">¿A que logo pertenece la imagen?</string>
    <string name="send_btn_label">Enviar</string>
    <string name="radiobuttontext1">Pertenece a Facebook</string>
    <string name="radiobuttonText2">Pertenece a Twitter</string>
    <string name="radiobuttontext3">Pertenece a Whatsapp</string>
    <string name="radiobuttontext4">Pertenece a Instagram</string>
    <string name="logo_de_whatsapp">Logo de whatsapp</string>
</resources>